--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "author": "Jason Melgoza",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "optimize": "rimraf ./optimized & svgo -q -p 8 -f ./raw -o ./optimized"
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.1",
+    "svgo": "^3.0.2"
+  }
 }
