--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "metal-icons",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A flexible React icon set",
   "main": "src/index.js",
   "author": "Jason Melgoza",
   "license": "MIT",
   "private": false,
-  "files": ["src/"],
+  "files": [
+    "src/"
+  ],
   "scripts": {
     "clean": "rimraf package *.tgz",
     "optimize": "yarn optimize:line:16 && yarn optimize:line:24 && yarn optimize:solid:16 && yarn optimize:solid:24",
@@ -23,7 +25,6 @@
   "devDependencies": {
     "@svgr/cli": "^8.0.1",
     "@svgr/core": "^8.0.0",
-    "camelcase": "^7.0.1",
     "rimraf": "^5.0.1",
     "svgo": "^3.0.2"
   }
