--- a/package.json
+++ b/package.json
@@ -6,26 +6,35 @@
   "author": "Jason Melgoza",
   "license": "MIT",
   "private": false,
-  "files": [
-    "src/"
-  ],
+  "files": ["dist"],
+  "module": "dist/index.esm.js",
   "scripts": {
     "clean": "rimraf package *.tgz",
     "optimize": "yarn optimize:line:16 && yarn optimize:line:24 && yarn optimize:solid:16 && yarn optimize:solid:24",
-    "build": "yarn build:line:16 && yarn build:line:24 && yarn build:solid:16 && yarn build:solid:24",
+    "construct": "yarn construct:line:16 && yarn construct:line:24 && yarn construct:solid:16 && yarn construct:solid:24",
+    "prebuild": "rimraf dist",
+    "build": "rollup -c --bundleConfigAsCjs",
     "optimize:line:16": "rimraf ./optimized/16/outline && svgo -q -p 8 -f ./raw/16/outline -o ./optimized/16/outline",
     "optimize:line:24": "rimraf ./optimized/24/outline && svgo -q -p 8 -f ./raw/24/outline -o ./optimized/24/outline",
     "optimize:solid:16": "rimraf ./optimized/16/solid && svgo -q -p 8 -f ./raw/16/solid -o ./optimized/16/solid",
     "optimize:solid:24": "rimraf ./optimized/24/solid && svgo -q -p 8 -f ./raw/24/solid -o ./optimized/24/solid",
-    "build:line:16": "svgr --out-dir src/16/outline -- optimized/16/outline",
-    "build:line:24": "svgr --out-dir src/24/outline -- optimized/16/outline",
-    "build:solid:16": "svgr --out-dir src/16/solid -- optimized/16/solid",
-    "build:solid:24": "svgr --out-dir src/24/solid -- optimized/24/solid"
+    "construct:line:16": "svgr --out-dir src/16/outline -- optimized/16/outline",
+    "construct:line:24": "svgr --out-dir src/24/outline -- optimized/16/outline",
+    "construct:solid:16": "svgr --out-dir src/16/solid -- optimized/16/solid",
+    "construct:solid:24": "svgr --out-dir src/24/solid -- optimized/24/solid"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@rollup/plugin-babel": "^6.0.4",
     "@svgr/cli": "^8.0.1",
     "@svgr/core": "^8.0.0",
     "rimraf": "^5.0.1",
+    "rollup": "^4.1.4",
     "svgo": "^3.0.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.23.2"
   }
 }
