--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
       "import": "./dist/24/solid/index.esm.js"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "clean": "rimraf package *.tgz",
     "optimize": "yarn optimize:line:16 && yarn optimize:line:24 && yarn optimize:solid:16 && yarn optimize:solid:24",
