Added metal-icons to the website package.

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "metal-icons": "^0.1.9",
+    "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-dom": "^18"
   }
 }
