--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "metal-icons": "0.1.10",
+    "metal-icons": "workspace:^",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
