--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -9,70 +9,64 @@
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
+    "website": {
+      "name": "website",
+      "command": "yarn workspace website dev",
+      "preview": {
+        "port": 3000
+      }
+    },
     "clean": {
       "name": "clean",
-      "command": "yarn clean",
-      "runAtStart": false
+      "command": "yarn clean"
     },
     "optimize": {
       "name": "optimize",
-      "command": "yarn optimize",
-      "runAtStart": false
+      "command": "yarn optimize"
     },
     "icons": {
       "name": "icons",
-      "command": "yarn icons",
-      "runAtStart": false
+      "command": "yarn icons"
     },
     "prebuild": {
       "name": "prebuild",
-      "command": "yarn prebuild",
-      "runAtStart": false
+      "command": "yarn prebuild"
     },
     "build": {
       "name": "build",
-      "command": "yarn build",
-      "runAtStart": false
+      "command": "yarn build"
     },
     "optimize:line:16": {
       "name": "optimize:line:16",
-      "command": "yarn optimize:line:16",
-      "runAtStart": false
+      "command": "yarn optimize:line:16"
     },
     "optimize:line:24": {
       "name": "optimize:line:24",
-      "command": "yarn optimize:line:24",
-      "runAtStart": false
+      "command": "yarn optimize:line:24"
     },
     "optimize:solid:16": {
       "name": "optimize:solid:16",
-      "command": "yarn optimize:solid:16",
-      "runAtStart": false
+      "command": "yarn optimize:solid:16"
     },
     "optimize:solid:24": {
       "name": "optimize:solid:24",
-      "command": "yarn optimize:solid:24",
-      "runAtStart": false
+      "command": "yarn optimize:solid:24"
     },
     "construct:line:16": {
       "name": "construct:line:16",
-      "command": "yarn construct:line:16",
-      "runAtStart": false
+      "command": "yarn construct:line:16"
     },
     "construct:line:24": {
       "name": "construct:line:24",
-      "command": "yarn construct:line:24",
-      "runAtStart": false
+      "command": "yarn construct:line:24"
     },
     "construct:solid:16": {
       "name": "construct:solid:16",
-      "command": "yarn construct:solid:16",
-      "runAtStart": false
+      "command": "yarn construct:solid:16"
     },
     "construct:solid:24": {
       "name": "construct:solid:24",
-      "command": "yarn construct:solid:24",
-      "runAtStart": false
+      "command": "yarn construct:solid:24"
     }
   }
 }
