--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "metal-icons": "0.1.11",
+    "metal-icons": "workspace:^",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
