Updated `website` package (#15)
* feat: Update Icons and Add Tabs

Updated the icon library and added a tab component to the website.

* style: Update icon tabs styles

Update styles for icon tabs and layout in website.

* feat: Add small icons components

Add new components for small solid and outline icons

* refactor: Refactor layout and icon components

Refactor layout and icon components in website package.

* feat: Change favicon

Change favicon from favicon.ico to a custom emoji icon

* Added Columns svgs and icon components

* feat: Added Tabs component to website package

Added Tabs component to website package to display outline variants.

* Update yarn.lock

* feat: Added Columns icon and Tabs component

Added Columns icon and Tabs component to website package.

* feat: Update metal-icons dependency version

Update metal-icons from workspace:^ to ^0.1.13 in package.json

* fix: Update metal-icons version

Update metal-icons version from v0.1.12 to v0.1.13 in Layout.js

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "metal-icons": "0.1.12",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "metal-icons": "^0.1.13",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
