fix: Update metal-icons version
Update metal-icons version from 0.1.13 to 0.1.14

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -11,7 +11,7 @@
   "tasks": {
     "website": {
       "name": "website",
-      "command": "yarn workspace website dev",
+      "command": "yarn --cwd ./packages/website dev",
       "preview": {
         "port": 3000
       }
