feat: Added metal-icons and @vercel/og to package.json
Added og:image meta tag to Layout.js and added padding to Layout.module.css

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.4",
-    "metal-icons": "workspace:^",
+    "@vercel/og": "^0.5.20",
+    "metal-icons": "^0.1.15",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
