--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -18,7 +18,7 @@
     },
     "clean": {
       "name": "clean",
-      "command": "yarn clean"
+      "command": "yarn clean-modules"
     },
     "optimize": {
       "name": "optimize",
