--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website",
+  "version": "0.1.23",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +12,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-tabs": "^1.0.4",
     "@vercel/og": "^0.5.20",
-    "metal-icons": "^0.1.22",
+    "metal-icons": "^0.1.23",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
