--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "^0.6.2",
     "metal-icons": "*",
     "next": "14.1.4",
     "react": "^18",
