--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@vercel/og": "^0.6.2",
-    "metal-icons": "*",
+    "metal-icons": "^0.2.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
