--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "metal-icons": "file:../metal-icons",
+    "metal-icons": "^0.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
