feat: add motion library and update dependencies in package.json and yarn.lock; export Hero component in index.ts

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "metal-icons": "^0.2.8",
+    "motion": "^12.10.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
