--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@svgr/core": "^5.5.0",
     "camelcase": "^8.0.0",
     "prettier": "^3.5.3",
+    "react": "^18.2.0",
     "rimraf": "^6.0.1",
     "svgo": "^3.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   }
 }
