--- a/packages/metal-icons/package.json
+++ b/packages/metal-icons/package.json
@@ -153,6 +153,6 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react": "^16.x || ^17.x || ^18.x || ^19.0.0 || ^19.0.0-rc"
+    "react": "^18.2.0"
   }
 }
