--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -54,10 +54,18 @@ jobs:
           # Clean up temp files
           rm TEMP_CHANGELOG.md NEW_ENTRY.md
 
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add CHANGELOG.md
-          git commit -m "Update changelog for ${{ github.event.release.tag_name || github.event.inputs.version }}" || exit 0
-          git push
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Update changelog for ${{ github.event.release.tag_name || github.event.inputs.version }}"
+          title: "Update changelog for ${{ github.event.release.tag_name || github.event.inputs.version }}"
+          body: |
+            This PR updates the changelog for version ${{ github.event.release.tag_name || github.event.inputs.version }}.
+            
+            Changes are automatically generated based on merged PRs since the last release.
+          branch: update-changelog-${{ github.event.release.tag_name || github.event.inputs.version }}
+          base: main
+          labels: |
+            documentation
+            automated pr
