Update package versions in website and yarn.lock for React, TypeScript, and related dependencies to ensure compatibility and improvements.

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,20 +12,20 @@
   "dependencies": {
     "metal-icons": "^0.2.10",
     "motion": "^12.10.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.3.5"
+    "vite": "^7.1.9"
   }
 }
