Add sonner package for toast notifications, implement icon click handling, and copy optimized SVGs to public directory

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,7 +13,8 @@
     "metal-icons": "^0.2.10",
     "motion": "^12.23.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
