--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "private": true,
-  "version": "0.2.10",
+  "version": "0.2.11",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "metal-icons": "^0.2.10",
+    "metal-icons": "0.2.11",
     "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
