--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -2,7 +2,7 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
     ".": {
-      "release-type": "simple",
+      "release-type": "node",
       "package-name": "metal-icons",
       "changelog-path": "CHANGELOG.md",
       "include-component-in-tag": false,
