--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,3 +15,5 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
+        with:
+          manifest-file: .github/.release-please-manifest.json
