--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
+          config-file: .github/release-please-config.json
           manifest-file: .github/.release-please-manifest.json
