--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
-    ".": {
+    "packages/metal-icons": {
       "release-type": "node",
       "package-name": "metal-icons",
       "changelog-path": "CHANGELOG.md",
