chore: Remove obsolete release-please manifest and workflow files, update changelog path in release-please config

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,4 +17,4 @@ jobs:
         id: release
         with:
           config-file: .github/release-please-config.json
-          manifest-file: .github/.release-please-manifest.json
+          manifest-file: .github/release-please-manifest.json
