--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -4,7 +4,7 @@
     "packages/metal-icons": {
       "release-type": "node",
       "package-name": "metal-icons",
-      "changelog-path": "../../CHANGELOG.md",
+      "changelog-path": "CHANGELOG.md",
       "include-component-in-tag": false,
       "include-v-in-tag": true
     }
