--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,10 +1,13 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
+    ".": {
+      "release-type": "simple",
+      "changelog-path": "CHANGELOG.md"
+    },
     "packages/metal-icons": {
       "release-type": "node",
       "package-name": "metal-icons",
-      "changelog-path": "CHANGELOG.md",
       "include-component-in-tag": false,
       "include-v-in-tag": true
     }
