feat: add scripts to generate icons and version JSON files, and update package.json with new commands

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build-solid-24": "rimraf ./24/solid ./24/optimized/solid && svgo --config=svgo.config.mjs -q -p 8 -f ./src/24/solid -o ./optimized/24/solid",
     "dev": "yarn --cwd ./packages/website dev",
     "sort-icons": "node ./scripts/sort-icons.js",
+    "generate-icons": "node ./scripts/generate-icons.js",
+    "generate-version": "node ./scripts/generate-version.js",
+    "sync-website": "yarn generate-icons && yarn sort-icons && yarn generate-version",
     "clean-modules": "rimraf ./packages/*/node_modules/ && rimraf ./node_modules/ && rm yarn.lock && yarn cache clean"
   },
   "devDependencies": {
