fix: update GitHub Actions workflow to reference the current branch for checkout

--- a/.github/workflows/build-icons.yml
+++ b/.github/workflows/build-icons.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.head_ref }}
           fetch-depth: 0
 
       - name: Fetch base branch
