chore: update release-please configuration to include node-workspace plugin

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "plugins": [
+    {
+      "type": "node-workspace"
+    }
+  ],
   "packages": {
     ".": {
       "release-type": "simple",
